--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,19 +7,21 @@ edition = "2021"
 
 [dependencies]
 log = "0.4"
-winit = { version = "0.29", features = ["android-game-activity", "rwh_05"]}
+winit = { version = "0.29", path="../winit", features = ["android-game-activity", "rwh_05"]}
 wgpu = "0.18.0"
 pollster = "0.2"
 nom = "7.1.3"
 cgmath = "0.18.0"
 ply-rs = "0.1.3"
 bytemuck = { version = "1.14.0", features = ["derive"] }
+anyhow = "1.0.76"
 
 [target.'cfg(not(target_os = "android"))'.dependencies]
 env_logger = "0.10"
 
 [target.'cfg(target_os = "android")'.dependencies]
 android_logger = "0.13.1"
+jni = "0.21.1"
 
 [features]
 default = []
