Fix app not shown in "Open With"

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,6 +23,7 @@
             android:name=".ModelViewerActivity"
             android:configChanges="orientation|screenSize|screenLayout|keyboardHidden"
             android:exported="true"
+            android:label="Model Viewer"
             android:theme="@style/Theme.AppCompat.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.VIEW" />
@@ -30,10 +31,10 @@
                 <category android:name="android.intent.category.DEFAULT" />
                 <category android:name="android.intent.category.BROWSABLE" />
 
-                <data android:scheme="file" />
-                <data android:mimeType="*/*" />
+                <data android:mimeType="text/*" />
                 <data android:pathPattern=".*\\.vly" />
-                <data android:host="*" />
+                <data android:scheme="file" />
+                <data android:scheme="content" />
             </intent-filter>
 
             <meta-data
