Add android vox intent filter

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -36,6 +36,17 @@
                 <data android:scheme="file" />
                 <data android:scheme="content" />
             </intent-filter>
+            <intent-filter>
+                <action android:name="android.intent.action.VIEW" />
+
+                <category android:name="android.intent.category.DEFAULT" />
+                <category android:name="android.intent.category.BROWSABLE" />
+
+                <data android:mimeType="application/octet-stream" />
+                <data android:pathPattern=".*\\.vox" />
+                <data android:scheme="file" />
+                <data android:scheme="content" />
+            </intent-filter>
 
             <meta-data
                 android:name="android.app.lib_name"
