--- a/app/build.gradle
+++ b/app/build.gradle
@@ -69,11 +69,13 @@ dependencies {
     implementation platform('androidx.compose:compose-bom:2023.08.00')
     implementation 'androidx.compose.ui:ui'
     implementation 'androidx.compose.ui:ui-graphics'
+    implementation platform('androidx.compose:compose-bom:2023.08.00')
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
     androidTestImplementation platform('androidx.compose:compose-bom:2023.08.00')
     androidTestImplementation 'androidx.compose.ui:ui-test-junit4'
+    androidTestImplementation platform('androidx.compose:compose-bom:2023.08.00')
 
     // Android Compose
     def composeBom = platform('androidx.compose:compose-bom:2023.10.01')
